<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="u2bkaraoke_app_name">U2B Songs</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song_query">SongQuery</string>
    <string name="title_activity_singer_query">SingerQuery</string>
    <string name="title_activity_singer_area_query">SingerArea</string>
    <string name="title_activity_language_query">LanguageQuery</string>
    <string name="noResultString">No result.</string>
    <string name="failedMessage">Failed.</string>
    <string name="succeededMessage">Succeeded.</string>
    <string name="loadingString">Loading …</string>

    <string name="mainMenuTitle">Select One Option</string>
    <string name="singerOrderString">Songs By Singer</string>
    <string name="newSongOrderString">New Songs</string>
    <string name="hotSongOrderString">Popular Songs"</string>
    <string name="languageOrderString">Songs By Language</string>
    <string name="exitProgram">Exit</string>

    <string name="maleSinger">Male Singers</string>
    <string name="femaleSinger">Female Singers</string>
    <string name="groupSinger">Group Singers</string>
    <string name="returnToPrevious">Return</string>

    <string name="languagesListString">Languages</string>
    <string name="wordsListString">Number of Words</string>
    <string name="newSongLanguagesListString">Languages of New Songs</string>
    <string name="hotSongLanguagesListString">Languages of Hot Songs</string>
    <string name="singerAreasListString">Singer Areas</string>
    <string name="allSingersString">All Singers</string>
    <string name="songsListString">Songs</string>
    <string name="singersListString">Singers</string>
    <string name="allSongsString">All Songs</string>

    <string name="firstPage">First Page</string>
    <string name="previousPage">Prev Page</string>
    <string name="nextPage">Next Page</string>
    <string name="lastPage">Last Page</string>
    <string name="pageNoTotal">Page</string>
    <string name="returnTo">Return</string>

    <string name="areaNo">Area No</string>
    <string name="areaNa">Area Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="oneWordOrderString">One Word</string>
    <string name="twoWordsOrderString">Two Words</string>
    <string name="threeWordsOrderString">Three Words</string>
    <string name="fourWordsOrderString">Four Words</string>
    <string name="fiveWordsOrderString">Five Words</string>
    <string name="sixWordsOrderString">Six Words</string>
    <string name="sevenWordsOrderString">Seven Words</string>
    <string name="eightWordsOrderString">Eight Words</string>
    <string name="nineWordsOrderString">Nine Words</string>
    <string name="tenWordsOrderString">Ten Words or More</string>

    <string name="singerNameString">"Singer's Name"</string>
    <string name="songNameString">"Song's Name"</string>

    <string name="newString">New</string>
    <string name="hotString">Hot</string>

    <string name="songNotReadyYet">Red Alert\nSong Not Ready Yet</string>
    <string name="numWords">Number of Words</string>
    <string name="selectStr">Select</string>
    <string name="search_singers">Search Singers</string>
    <string name="search_songs">Search Songs</string>

</resources>
