<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <TextView
        android:id="@+id/mainMenuTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:textColor="@color/darkOrange"
        android:text="@string/mainMenuTitle"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTextView"
        android:weightSum="5">

        <Button
            android:id="@+id/singerOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singerOrderString"
            android:background="@drawable/yellow_square_button"
            android:textColor="@color/blue"
            android:layout_margin="10dp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/newSongOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newSongOrderString"
            android:background="@drawable/yellow_square_button"
            android:textColor="@color/blue"
            android:layout_margin="10dp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/hotSongOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotSongOrderString"
            android:background="@drawable/yellow_square_button"
            android:textColor="@color/blue"
            android:layout_margin="10dp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/languageOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languageOrderString"
            android:background="@drawable/yellow_square_button"
            android:textColor="@color/blue"
            android:layout_margin="10dp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/exitProgramButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exitProgram"
            android:background="@drawable/yellow_square_button"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_margin="10dp"
            android:layout_weight="1">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
