<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SingerListActivity">

    <TextView
        android:id="@+id/singersListMenuTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:textColor="@color/darkOrange"
        android:text="@string/singersListString"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <LinearLayout
        android:id="@+id/singerSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/search_bar"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@+id/singersListMenuTextView" >

        <EditText
            android:id="@+id/singerSearchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text=""
            android:hint="@string/singerNameString"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="80dp"
            android:gravity="center_vertical|left">
        </EditText>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/singersListView_Layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/darkYellow"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintTop_toBottomOf="@+id/singerSearchLayout" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/singerListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView android:id="@+id/singerListEmptyTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:gravity="center"
            android:visibility="gone" >
        </TextView>

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toTopOf="@id/singersListReturnButton"
        android:weightSum="4">

        <Button
            android:id="@+id/firstPageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/firstPage"
            android:background="@android:drawable/btn_default"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_weight="1" >
        </Button>

        <Button
            android:id="@+id/previousPageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/previousPage"
            android:background="@android:drawable/btn_default"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_weight="1" >
        </Button>

        <Button
            android:id="@+id/nextPageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nextPage"
            android:background="@android:drawable/btn_default"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_weight="1" >
        </Button>

        <Button
            android:id="@+id/lastPageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/lastPage"
            android:background="@android:drawable/btn_default"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_weight="1" >
        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/singersListReturnButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/returnToPrevious"
        android:background="@drawable/yellow_square_button"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent" >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>