<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?android:attr/buttonBarStyle"
    android:background="@color/transparentDarkGray">

    <Button
        android:id="@+id/allSongOrderButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/allSongsString"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/my_button_text_color"
        android:background="@drawable/yellow_square_button"
        android:layout_margin="10sp"
        android:focusable="true"
        android:clickable="true"
        android:nextFocusUp="@id/allSongOrderButton"
        android:nextFocusLeft="@id/allSongOrderButton"
        android:nextFocusRight="@id/allSongOrderButton"
        android:nextFocusDown="@id/singerOrderButton"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>
    <Button
        android:id="@+id/singerOrderButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/singerOrderString"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/my_button_text_color"
        android:background="@drawable/yellow_square_button"
        android:layout_margin="10sp"
        android:focusable="true"
        android:clickable="true"
        android:nextFocusUp="@id/allSongOrderButton"
        android:nextFocusLeft="@id/singerOrderButton"
        android:nextFocusRight="@id/singerOrderButton"
        android:nextFocusDown="@id/newSongOrderButton"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintTop_toBottomOf="@id/allSongOrderButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>
    <Button
        android:id="@+id/newSongOrderButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/newSongOrderString"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/my_button_text_color"
        android:background="@drawable/yellow_square_button"
        android:layout_margin="10sp"
        android:focusable="true"
        android:clickable="true"
        android:nextFocusUp="@id/singerOrderButton"
        android:nextFocusLeft="@id/newSongOrderButton"
        android:nextFocusRight="@id/newSongOrderButton"
        android:nextFocusDown="@id/hotSongOrderButton"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintTop_toBottomOf="@id/singerOrderButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>
    <Button
        android:id="@+id/hotSongOrderButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/hotSongOrderString"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/my_button_text_color"
        android:background="@drawable/yellow_square_button"
        android:layout_margin="10sp"
        android:focusable="true"
        android:clickable="true"
        android:nextFocusUp="@id/newSongOrderButton"
        android:nextFocusLeft="@id/hotSongOrderButton"
        android:nextFocusRight="@id/hotSongOrderButton"
        android:nextFocusDown="@id/languageOrderButton"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintTop_toBottomOf="@id/newSongOrderButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>
    <Button
        android:id="@+id/languageOrderButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/languageOrderString"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/my_button_text_color"
        android:background="@drawable/yellow_square_button"
        android:layout_margin="10sp"
        android:focusable="true"
        android:clickable="true"
        android:nextFocusUp="@id/hotSongOrderButton"
        android:nextFocusLeft="@id/languageOrderButton"
        android:nextFocusRight="@id/languageOrderButton"
        android:nextFocusDown="@id/u2bKExitButton"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintTop_toBottomOf="@id/hotSongOrderButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>
    <LinearLayout
        android:id="@+id/exitShowVideoLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toBottomOf="@id/languageOrderButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <include layout="@layout/exit_show_video_layout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
